--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,4 @@
-
-  
   .hero-container {
-    /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
     height: 100vh;
     width: 100%;
     display: flex;
@@ -19,20 +16,42 @@
         position: fixed;
         z-index: -1;
   }
-  .hero-container > h1 {
-    color: #fff;
-    font-size: 100px;
-    margin-top: -100px;
+
+  .info-container h1{
+    color: white;
+    font-size: 75px;
+  }
+
+  .info-container h2{
+    color: white;
+    font-size: 25px;
   }
   
-  .hero-container > p {
-    margin-top: 8px;
-    color: #fff;
-    font-size: 32px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+  .stats-container {
+    margin-top: 20%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .stats-box{
+    width: 50%;
+    padding: 40px;
+    border: 1px solid white;
+    margin-right: 50px;
+    background-color: #23274a;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 10px 5px 5px white;
   }
   
+  .stats-container h1{
+    color: white;
+    font-size: 38px;
+  }
+
   .hero-btns {
     margin-top: 32px;
   }
